# TrueColorGIF

./: CMakeLists.txt
TrueColorGIF/: CMakeLists.txt  Collagist.cpp  Collagist.hpp  Compression.cpp  Compression.hpp  Encoder.cpp  Encoder.hpp  FileOutput.hpp  Palette.cpp  Palette.hpp  main.cpp
lodepng/: CMakeLists.txt
